<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_margin="5dp"
    android:id="@+id/ly_movie">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/thumbnail"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_launcher_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/movie_tittle"
            android:text="@string/title"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/popularity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popularity"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/descrip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overview"
            android:maxLines="3"
            android:ellipsize="end"
            android:layout_marginTop="15sp"
            android:textColor="@android:color/black"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tanggal_release"
            android:id="@+id/date_released"
            android:layout_marginTop="10dp"
            android:textAlignment="textEnd"
            android:layout_marginEnd="3dp"/>

    </LinearLayout>


</LinearLayout>