<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="16dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context="com.averoes.daff.cataloguemovie20.DetailActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_detail"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_launcher_background"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="8dp"
            android:id="@+id/thumbnail_detail"
            android:src="@drawable/ic_launcher_background"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="8dp">


            <TextView
                android:id="@+id/title_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textColor="@android:color/black"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/rating_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/rating"
                android:textColor="@android:color/black"
                android:layout_marginTop="16dp"/>

            <TextView
                android:id="@+id/date_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/release_date"
                android:textColor="@android:color/black"
                android:layout_marginTop="20dp"/>

        </LinearLayout>

    </LinearLayout>


        <TextView
            android:id="@+id/overview_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/overview"
            android:gravity="start"
            android:layout_marginTop="20dp" />

    </LinearLayout>

</ScrollView>

